refactor: code-quality cleanup across auth, DAOs, endpoints, models
Security & auth
- SecurityConfig: remove unused formLogin block and its unused Brute-force success/failure handlers (AuthEndpoint already invokes LoginAttemptService and returns 401 JSON directly).
- AuthEndpoint: replace ResponseEntity<?> wildcard with Object.
- JwtService: drive token time off java.time (Clock/Instant/Duration); keep java.util.Date only at the JJWT 0.12.x builder boundary via Date.from(instant) and narrow-suppress S2143 with a comment.
- LoginAttemptService: rename local `record` to `attempt` (avoids the Java restricted identifier).
- AppConfig: expose Clock.systemDefaultZone() as a bean.
- GlobalExceptionHandler: null-safe MethodArgumentTypeMismatchException handling (getRequiredType() can be null); drop redundant lambda parens.

DAO layer
- TrainerDaoImpl / TraineeDaoImpl: extract USERNAME constant (removes the 6/7 duplicated "username" literals); switch to constructor injection of a @Lazy self-reference and route delete() / updateTraineeTrainers() findById calls through it so the readOnly @Transactional on findById is honored.
- TraineeDaoImpl: use LocalDate.now(clock) instead of ambient-TZ LocalDate.now(); constructor-inject Clock.

Service layer
- TrainingServiceImpl: drop @RequiredArgsConstructor and add an explicit constructor taking @Lazy TrainingService self; selectTraining now delegates to self.findByName(...) so the transactional proxy applies (also removes S4144 duplicated-body warning).

REST layer
- TrainerEndpoint, TrainingEndpoint, TraineeEndpoint: swap Collectors.toList() for Stream.toList() (results are only handed to ResponseEntity.ok, so unmodifiable is fine); drop the now-unused Collectors import.
- TraineeEndpoint: remove the unused `Trainee trainee = ...` capture in updateTraineeTrainers (facade call kept for its side effect).

Model cleanup
- Trainee, Trainer, Training, User: remove unused JPA and Lombok imports.

Tests
- TrainerDaoImplTest, TraineeDaoImplT